--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ src="1234.jpg" alt="Elva dressed as a fairy">
 </table>
   <p><a href="https://forms.yandex.ru/u/6444e08f068ff0104543cb9c/"><h2>Свяжитесь со мной</h2></a></p>
   <div class="hero_links"></div>
-  <a class="hero_link" href="https://t.me/lovewhenhairmenaresmearedwithoil"><i class='bx bxl-telegram'></i></a>
+  <a class="hero_link" href="https://t.me/mincraft_love"><i class='bx bxl-telegram'></i></a>
   <a class="hero_link" href="https://vk.com/"><i class='bx bxl-vk' ></i></i></a>
 <script>
     function calc() {
